--- a/GroupTu27/src/views/adminDashboard.fxml
+++ b/GroupTu27/src/views/adminDashboard.fxml
@@ -1,16 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox xmlns:fx="http://javafx.com/fxml" fx:controller="controllers.AdminController" spacing="10" alignment="CENTER">
-    <Label text="Admin Dashboard" />
-
-    <Button text="Invite User" onAction="#handleInviteUser" />
-    <Button text="Reset User Account" onAction="#handleResetUserAccount" />
-    <Button text="Delete User" onAction="#handleDeleteUser" />
-    <Button text="List User Accounts" onAction="#handleListUserAccounts" />
-    <Button text="Add/Remove Roles" onAction="#handleManageRoles" />
-    <Button text="Logout" onAction="#handleLogout" />
+<VBox alignment="CENTER" prefHeight="240.0" prefWidth="520.0" spacing="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23" fx:controller="controllers.AdminController">
+    <Label text="Admin Dashboard">
+      <font>
+         <Font name="System Bold" size="24.0" />
+      </font></Label>
+   <Label text="Options:">
+      <font>
+         <Font name="System Bold" size="14.0" />
+      </font>
+   </Label>
+   <GridPane prefWidth="224.0">
+     <columnConstraints>
+       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+     </columnConstraints>
+     <rowConstraints>
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+     </rowConstraints>
+      <children>
+      
+                                  <Button onAction="#handleInviteUser" text="Invite User" GridPane.halignment="CENTER" />
+          <Button onAction="#handleResetUserAccount" text="Reset User Account" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+          <Button onAction="#handleDeleteUser" text="Delete User" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+          <Button onAction="#handleListUserAccounts" text="List User Accounts" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+          <Button onAction="#handleManageRoles" text="Add/Remove Roles" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+      </children>
+      <VBox.margin>
+         <Insets />
+      </VBox.margin>
+   </GridPane>
+    <Button alignment="CENTER" onAction="#handleLogout" text="Logout" />
 </VBox>
