--- a/GroupTu27/src/views/login.fxml
+++ b/GroupTu27/src/views/login.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <GridPane alignment="CENTER" hgap="10" prefHeight="240.0" prefWidth="520.0" vgap="10" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
     <Label text="Username:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
@@ -21,8 +22,14 @@
     <TextField fx:id="invitationCodeField" promptText="Enter Invitation code here" GridPane.columnIndex="1" GridPane.rowIndex="4" />
     
     <Button onAction="#handleInvitationCode" text="Submit" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
-   <Label text="Returning Users:" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
-   <Label prefHeight="40.0" prefWidth="86.0" text="First Time Users:" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+   <Label text="Returning Users:" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+      <font>
+         <Font name="System Bold" size="18.0" />
+      </font></Label>
+   <Label prefHeight="40.0" text="First Time Users:" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+      <font>
+         <Font name="System Bold" size="18.0" />
+      </font></Label>
    <columnConstraints>
       <ColumnConstraints halignment="CENTER" maxWidth="228.0000244140625" minWidth="121.5999755859375" prefWidth="121.5999755859375" />
       <ColumnConstraints maxWidth="216.0000244140625" minWidth="71.99997558593753" prefWidth="216.0000244140625" />
