--- a/GroupTu27/src/views/setupAccount.fxml
+++ b/GroupTu27/src/views/setupAccount.fxml
@@ -21,5 +21,5 @@
     <Label text="Email:" GridPane.rowIndex="4" GridPane.columnIndex="0" />
     <TextField fx:id="emailField" GridPane.rowIndex="4" GridPane.columnIndex="1" />
 
-    <Button text="Complete Setup" onAction="#handleCompleteSetup" GridPane.rowIndex="5" GridPane.columnIndex="1" />
+    <Button text="Complete Setup" onAction="#handleCompleteAccountSetup" GridPane.rowIndex="5" GridPane.columnIndex="1" />
 </GridPane>
