--- a/GroupTu27/src/views/setupAccount.fxml
+++ b/GroupTu27/src/views/setupAccount.fxml
@@ -3,23 +3,37 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<GridPane xmlns:fx="http://javafx.com/fxml" fx:controller="controllers.SetupAccountController" hgap="10" vgap="10" alignment="CENTER">
-    <Label text="First Name:" GridPane.rowIndex="0" GridPane.columnIndex="0" />
-    <TextField fx:id="firstNameField" GridPane.rowIndex="0" GridPane.columnIndex="1" />
+<GridPane alignment="CENTER" hgap="10" prefHeight="240.0" prefWidth="520.0" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23" fx:controller="controllers.SetupAccountController">
+    <Label text="First Name:" GridPane.halignment="RIGHT" />
+    <TextField fx:id="firstNameField" GridPane.columnIndex="1" />
     
-    <Label text="Middle Name:" GridPane.rowIndex="1" GridPane.columnIndex="0" />
-    <TextField fx:id="middleNameField" GridPane.rowIndex="1" GridPane.columnIndex="1" />
+    <Label text="Middle Name:" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+    <TextField fx:id="middleNameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
     
-    <Label text="Last Name:" GridPane.rowIndex="2" GridPane.columnIndex="0" />
-    <TextField fx:id="lastNameField" GridPane.rowIndex="2" GridPane.columnIndex="1" />
+    <Label text="Last Name:" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+    <TextField fx:id="lastNameField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
     
-    <Label text="Preferred First Name (Optional):" GridPane.rowIndex="3" GridPane.columnIndex="0" />
-    <TextField fx:id="preferredNameField" GridPane.rowIndex="3" GridPane.columnIndex="1" />
+    <Label text="Preferred First Name (Optional):" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+    <TextField fx:id="preferredNameField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-    <Label text="Email:" GridPane.rowIndex="4" GridPane.columnIndex="0" />
-    <TextField fx:id="emailField" GridPane.rowIndex="4" GridPane.columnIndex="1" />
+    <Label text="Email:" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
+    <TextField fx:id="emailField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-    <Button text="Complete Setup" onAction="#handleCompleteAccountSetup" GridPane.rowIndex="5" GridPane.columnIndex="1" />
+    <Button onAction="#handleCompleteAccountSetup" text="Complete Setup" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+   <columnConstraints>
+      <ColumnConstraints />
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+   </rowConstraints>
 </GridPane>
