--- a/GroupTu27/src/views/login.fxml
+++ b/GroupTu27/src/views/login.fxml
@@ -10,27 +10,31 @@
 <?import javafx.scene.text.Font?>
 
 <GridPane alignment="CENTER" hgap="10" prefHeight="240.0" prefWidth="520.0" vgap="10" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
-    <Label text="Username:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+    <Label text="Username:" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
     <TextField fx:id="usernameField" promptText="Enter Username here" GridPane.columnIndex="1" GridPane.rowIndex="1" />
     
-    <Label text="Password:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+    <Label text="Password:" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
     <PasswordField fx:id="passwordField" prefHeight="26.0" prefWidth="166.0" promptText="Enter Password here" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+	
+	<Label text="Confirm Password:" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+	<PasswordField fx:id="confirmPasswordField" promptText="Re-enter Password here" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+	
+    <Button alignment="CENTER" onAction="#handleLogin" text="Login" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
 
-    <Button alignment="CENTER" onAction="#handleLogin" text="Login" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-
-    <Label text="Enter Invitation Code:" GridPane.rowIndex="4" />
-    <TextField fx:id="invitationCodeField" promptText="Enter Invitation code here" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+    <Label text="Enter Invitation Code:" GridPane.rowIndex="6" />
+    <TextField fx:id="invitationCodeField" promptText="Enter Invitation code here" GridPane.columnIndex="1" GridPane.rowIndex="6" />
     
-    <Button onAction="#handleInvitationCode" text="Submit" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+    <Button onAction="#handleInvitationCode" text="Submit" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
    <Label text="Returning Users:" GridPane.columnIndex="1" GridPane.halignment="CENTER">
       <font>
          <Font name="System Bold" size="18.0" />
       </font></Label>
-   <Label prefHeight="40.0" text="First Time Users:" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+   <Label prefHeight="40.0" text="First Time Users:" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5">
       <font>
          <Font name="System Bold" size="18.0" />
       </font></Label>
-   <columnConstraints>
+   <Label fx:id="errorMessageLabel" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+      <columnConstraints>
       <ColumnConstraints halignment="CENTER" maxWidth="228.0000244140625" minWidth="121.5999755859375" prefWidth="121.5999755859375" />
       <ColumnConstraints maxWidth="216.0000244140625" minWidth="71.99997558593753" prefWidth="216.0000244140625" />
       <ColumnConstraints maxWidth="174.40000000000003" minWidth="71.99997558593753" prefWidth="119.19997558593747" />
@@ -39,6 +43,8 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
       <RowConstraints />
       <RowConstraints />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
       <RowConstraints />
       <RowConstraints />
       <RowConstraints />
