--- a/GroupTu27/src/views/roleSelection.fxml
+++ b/GroupTu27/src/views/roleSelection.fxml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.geometry.*?>
 
-<VBox alignment="CENTER" prefHeight="240.0" prefWidth="520.0" spacing="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23" fx:controller="controllers.RoleSelectionController">
-    <Label text="Select a Role for this Session:">
-      <font>
-         <Font name="System Bold" size="24.0" />
-      </font></Label>
-    <ComboBox fx:id="roleComboBox" promptText="Choose Role" />
+<GridPane fx:controller="controllers.RoleSelectionController" xmlns:fx="http://javafx.com/fxml" alignment="CENTER" hgap="10" vgap="10">
+
+    <!-- Title -->
+    <Label text="Select a Role" GridPane.rowIndex="0" GridPane.columnIndex="0" GridPane.columnSpan="2" />
+
+    <!-- List of Roles -->
+    <ListView fx:id="roleListView" GridPane.rowIndex="1" GridPane.columnIndex="0" GridPane.columnSpan="2" prefWidth="200" prefHeight="150" />
+
+    <!-- Select Button -->
+    <Button text="Select Role" onAction="#onSelectRole" GridPane.rowIndex="2" GridPane.columnIndex="0" />
+
+    <!-- Cancel Button -->
+    <Button text="Cancel" onAction="#onCancel" GridPane.rowIndex="2" GridPane.columnIndex="1" />
     
-    <Button onAction="#handleSelectRole" text="Continue" />
-</VBox>
+</GridPane>
