--- a/GroupTu27/src/views/roleSelection.fxml
+++ b/GroupTu27/src/views/roleSelection.fxml
@@ -1,21 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.geometry.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<GridPane fx:controller="controllers.RoleSelectionController" xmlns:fx="http://javafx.com/fxml" alignment="CENTER" hgap="10" vgap="10">
+<GridPane alignment="CENTER" hgap="10" prefHeight="283.0" prefWidth="314.0" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23" fx:controller="controllers.RoleSelectionController">
 
     <!-- Title -->
-    <Label text="Select a Role" GridPane.rowIndex="0" GridPane.columnIndex="0" GridPane.columnSpan="2" />
+    <Label text="Select a Page to Visit" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="0" />
 
     <!-- List of Roles -->
-    <ListView fx:id="roleListView" GridPane.rowIndex="1" GridPane.columnIndex="0" GridPane.columnSpan="2" prefWidth="200" prefHeight="150" />
+    <ChoiceBox fx:id="roleListView" prefHeight="177.0" prefWidth="83.0" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="1" />
 
     <!-- Select Button -->
-    <Button text="Select Role" onAction="#onSelectRole" GridPane.rowIndex="2" GridPane.columnIndex="0" />
+    <Button onAction="#onSelectRole" text="Select Role" GridPane.columnIndex="0" GridPane.rowIndex="2" />
 
     <!-- Cancel Button -->
-    <Button text="Cancel" onAction="#onCancel" GridPane.rowIndex="2" GridPane.columnIndex="1" />
+    <Button onAction="#onCancel" text="Cancel" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+   <columnConstraints>
+      <ColumnConstraints />
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+   </rowConstraints>
     
 </GridPane>
