--- a/GroupTu27/src/views/roleSelection.fxml
+++ b/GroupTu27/src/views/roleSelection.fxml
@@ -3,12 +3,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="CENTER" hgap="10" prefHeight="283.0" prefWidth="314.0" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23" fx:controller="controllers.RoleSelectionController">
+<GridPane alignment="CENTER" hgap="10" prefHeight="283.0" prefWidth="314.0" vgap="10" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.RoleSelectionController">
 
     <!-- Title -->
     <Label text="Select a Role to Login As:" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="0" />
