--- a/GroupTu27/src/views/adminDashboard.fxml
+++ b/GroupTu27/src/views/adminDashboard.fxml
@@ -15,40 +15,50 @@
     <Label text="Admin Dashboard">
       <font>
          <Font name="System Bold" size="24.0" />
-      </font></Label>
+      </font>
+    </Label>
+   
    <Label text="Options:">
       <font>
          <Font name="System Bold" size="14.0" />
       </font>
    </Label>
+   
    <GridPane>
-     <columnConstraints>
-       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <columnConstraints>
+         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          <ColumnConstraints />
-     </columnConstraints>
-     <rowConstraints>
-       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-     </rowConstraints>
-      <children>
+      </columnConstraints>
+      <rowConstraints>
+         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      </rowConstraints>
       
+      <children>
           <Button fx:id="InviteUser" onAction="#handleInviteUser" text="Invite User" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
           <Button fx:id="ResetAccount" onAction="#handleResetPassword" text="Reset Password" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
           <Button fx:id="deleteButton" onAction="#handleDeleteUserAccount" text="Delete User" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
           <Button fx:id="listUserButton" onAction="#handleListUserAccounts" text="List User Accounts" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
           <Button fx:id="roleButton" onAction="#handleManageRoles" text="Select Roles" GridPane.halignment="CENTER" />
-     	  <Label fx:id="inviteCodeLabel" text="blahblah" visible="false" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+          
+          <!-- New Button for Managing Help Articles -->
+          <Button fx:id="manageHelpArticlesButton" onAction="#handleManageHelpArticles" text="Manage Help Articles" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.halignment="CENTER" />
+
+          <Label fx:id="inviteCodeLabel" text="blahblah" visible="false" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
             <GridPane.margin>
                <Insets />
-            </GridPane.margin></Label>
+            </GridPane.margin>
+          </Label>
+         
          <Label fx:id="roleLabel" text="Choosing role..." visible="false" GridPane.halignment="CENTER" GridPane.valignment="TOP">
             <GridPane.margin>
                <Insets top="-20.0" />
             </GridPane.margin>
          </Label>
+         
          <ListView fx:id="userListView" stylesheets="@admin.css" visible="false" GridPane.columnIndex="2" GridPane.rowIndex="1" GridPane.rowSpan="2" />
          <ChoiceBox fx:id="removeOrAddRole" prefWidth="100.0" visible="false" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
          <ChoiceBox fx:id="userSelectRole" prefWidth="100.0" visible="false" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
@@ -65,5 +75,5 @@
       </VBox.margin>
    </GridPane>
    
-    <Button alignment="CENTER" onAction="#handleLogout" text="Logout" />
+   <Button alignment="CENTER" onAction="#handleLogout" text="Logout" />
 </VBox>
