--- a/GroupTu27/src/views/ManageHelpArticles.fxml
+++ b/GroupTu27/src/views/ManageHelpArticles.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="400.0" prefWidth="600.0" spacing="10" style="-fx-background-color: lightgray;" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="controllers.ManageHelpArticlesController">
+<VBox alignment="CENTER" prefHeight="400.0" prefWidth="600.0" spacing="10" style="-fx-background-color: lightgray;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ManageHelpArticlesController">
     
     <Label text="Manage Help Articles">
         <font>
@@ -36,6 +36,9 @@
         <rowConstraints>
             <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
         </rowConstraints>
         
         <!-- List of Articles -->
@@ -47,21 +50,33 @@
         <TextArea fx:id="descriptionField" promptText="Short Description" GridPane.columnIndex="1" GridPane.rowIndex="1" />
         
         <TextField fx:id="headerField" promptText="Header (e.g., level)" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-        <TextArea fx:id="bodyField" promptText="Article Body" prefHeight="100.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <TextArea fx:id="bodyField" prefHeight="100.0" promptText="Article Body" GridPane.columnIndex="1" GridPane.rowIndex="2" />
         
         <TextField fx:id="keywordsField" promptText="Keywords (comma-separated)" GridPane.columnIndex="0" GridPane.rowIndex="3" />
         <TextField fx:id="referencesField" promptText="References (comma-separated URLs)" GridPane.columnIndex="1" GridPane.rowIndex="3" />
         <TextField fx:id="groupsField" promptText="Groups (comma-separated)" GridPane.columnIndex="1" GridPane.rowIndex="3" />
         
-        <Button text="Add Article" onAction="#handleAddArticle" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-        <Button text="Delete Selected Article" onAction="#handleDeleteArticle" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+        <Button onAction="#handleAddArticle" text="Add Article" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+        <Button onAction="#handleDeleteArticle" text="Delete Selected Article" GridPane.columnIndex="1" GridPane.rowIndex="4" />
     </GridPane>
 
     <!-- Backup and Restore Section -->
     <GridPane hgap="10" vgap="10">
         <Label text="Backup / Restore:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
         <TextField fx:id="backupFileNameField" promptText="Enter backup file name" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-        <Button text="Backup Articles" onAction="#handleBackupArticles" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-        <Button text="Restore Articles" onAction="#handleRestoreArticles" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <Button onAction="#handleBackupArticles" text="Backup Articles" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <Button onAction="#handleRestoreArticles" text="Restore Articles" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <ChoiceBox fx:id="levelChoiceBox" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+      <Label prefHeight="17.0" prefWidth="111.0" text="Select Article Level:" GridPane.columnIndex="2" />
+      <columnConstraints>
+         <ColumnConstraints />
+         <ColumnConstraints />
+         <ColumnConstraints minWidth="10.0" prefWidth="120.0" />
+      </columnConstraints>
+      <rowConstraints>
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+      </rowConstraints>
     </GridPane>
 </VBox>
