--- a/GroupTu27/src/views/InviteUser.fxml
+++ b/GroupTu27/src/views/InviteUser.fxml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="182.0" prefWidth="366.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.InviteUserController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="234.0" prefWidth="271.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.InviteUserController">
    <children>
-      <Text layoutX="155.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Invite User" />
-      <Text layoutX="38.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Generated Code: " wrappingWidth="262.15234375" />
+      <Text layoutX="107.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Invite User" />
+      <Text fx:id="GeneratedCodeText" layoutX="38.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Generated Code: " wrappingWidth="262.15234375" />
       <Text layoutX="38.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Role Selection" />
-      <ComboBox layoutX="150.0" layoutY="95.0" prefWidth="150.0" />
+      <Button fx:id="GenerateOTCButton" layoutX="38.0" layoutY="189.0" mnemonicParsing="false" onAction="#generateOTCButtonClicked" text="Generate One Time Code" />
+      <CheckBox fx:id="AdminCheckBox" layoutX="138.0" layoutY="99.0" mnemonicParsing="false" text="Admin" />
+      <CheckBox fx:id="InstructorCheckBox" layoutX="138.0" layoutY="124.0" mnemonicParsing="false" text="Instructor" />
+      <CheckBox fx:id="StudentCheckBox" layoutX="138.0" layoutY="151.0" mnemonicParsing="false" text="Student" />
    </children>
 </AnchorPane>
