--- a/GroupTu27/src/views/instructorDashboard.fxml
+++ b/GroupTu27/src/views/instructorDashboard.fxml
@@ -1,52 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="240.0" prefWidth="521.0" spacing="10" style="-fx-background-color: lightgray;" stylesheets="@instructor.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.InstructorController">
+<VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" spacing="10" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.InstructorController">
     <Label text="Instructor Dashboard">
-      <font>
-         <Font name="System Bold" size="24.0" />
-      </font>
+        <font>
+            <Font size="24.0" />
+        </font>
     </Label>
-   
-   <Label text="Options:">
-      <font>
-         <Font name="System Bold" size="14.0" />
-      </font>
-   </Label>
-   
-   <GridPane>
-      <columnConstraints>
-         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-         <ColumnConstraints />
-      </columnConstraints>
-      <rowConstraints>
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      </rowConstraints>
-      
-      <children>
-          <Button fx:id="manageHelpArticlesButton" onAction="#handleManageHelpArticles" text="Manage Help Articles" GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.halignment="CENTER" />
-          <Button fx:id="backupRestoreButton" onAction="#handleBackupRestore" text="Backup/Restore" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.halignment="CENTER" />
-          <Button fx:id="listStudentButton" onAction="#handleListStudents" text="List Students" GridPane.columnIndex="2" GridPane.rowIndex="0" GridPane.halignment="CENTER" />
-          <Button fx:id="createSpecialAccessGroupButton" onAction="#handleSpecialAccessGroups" text="Manage Access Groups" GridPane.columnIndex="2" GridPane.rowIndex="1" GridPane.halignment="CENTER" />
-      </children>
-      <VBox.margin>
-         <Insets />
-      </VBox.margin>
-   </GridPane>
-   
-   <Button alignment="CENTER" onAction="#handleLogout" text="Logout" />
+
+    <GridPane hgap="10" vgap="10">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+        <children>
+            <Label text="Search Articles:" GridPane.rowIndex="0" GridPane.columnIndex="0" />
+            <TextField fx:id="searchField" GridPane.rowIndex="0" GridPane.columnIndex="1" />
+
+            <Label text="Filter by Level:" GridPane.rowIndex="1" GridPane.columnIndex="0" />
+            <ChoiceBox fx:id="levelChoiceBox" GridPane.rowIndex="1" GridPane.columnIndex="1" />
+
+            <Label text="Filter by Group:" GridPane.rowIndex="2" GridPane.columnIndex="0" />
+            <ChoiceBox fx:id="groupChoiceBox" GridPane.rowIndex="2" GridPane.columnIndex="1" />
+        </children>
+    </GridPane>
+
+    <Button fx:id="searchButton" text="Search Articles" onAction="#handleSearch" />
+
+    <ListView fx:id="searchResultsListView" prefHeight="200.0" />
+    <Button fx:id="viewArticleButton" text="View Article" onAction="#handleViewArticle" />
+
+    <Label text="Manage Groups:" />
+    <TextField fx:id="groupNameField" promptText="Enter group name" />
+    <Button fx:id="createGroupButton" text="Create Group" onAction="#handleCreateGroup" />
+    <Button fx:id="deleteGroupButton" text="Delete Group" onAction="#handleDeleteGroup" />
+    <ListView fx:id="groupListView" prefHeight="100.0" />
+
+    <Label text="Backup and Restore:" />
+    <Button fx:id="backupButton" text="Backup Data" onAction="#handleBackup" />
+    <Button fx:id="restoreButton" text="Restore Data" onAction="#handleRestore" />
 </VBox>
